buildpacks/nodejs/src/npm_install/snapshots/errors___npm_install_set_cache_dir_error.snap
---
source: buildpacks/nodejs-npm-install/src/errors.rs
---
- Debug Info:
  - Command failed `npm config set cache /some/dir --global`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to set the npm cache directory
!
! An unexpected error occurred while setting the npm cache directory.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
